--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -23,7 +23,7 @@
 
 <div>
   <div class="row">
-    <div class="col-lg-6" *ngFor="let p of posts">
+    <div class="col-lg-12 text-center" *ngFor="let p of posts">
       <a><img src="{{p.imageUrl}}" class="image"  alt=""/></a>
     </div>
 
