--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,18 +1,15 @@
 <div class="container">
     <div class="row">
         <!-- <div class="col-lg-6">
+           <app-comment [comment]="usercomments"></app-comment>
+        </div> -->
+
+        <!-- <div class="col-lg-6">
             <div *ngFor="let user of users">
                 <img src="https://getdrawings.com/free-icon-bw/grey-instagram-icon-20.png" height="40" width="40">
                 <h5>{{ user.u_name }}</h5>
             </div>
         </div> -->
-
-        <div class="col-lg-6">
-            <div *ngFor="let user of users">
-                <img src="https://getdrawings.com/free-icon-bw/grey-instagram-icon-20.png" height="40" width="40">
-                <h5>{{ user.u_name }}</h5>
-            </div>
-        </div>
 
         <!-- <div class="col-lg-6">
             <div *ngFor="let user of users">
@@ -21,13 +18,13 @@
                 </div>
             </div>
     </div> -->
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-6">
             <div *ngFor="let post of posts">
                 <div class="col-xs-12 text-center">
                 <img src="{{ post.imageUrl }}">
                 </div>
             </div>
-        </div>
+        </div> -->
 <!-- ------------------------------------------------ -->
   
 
