--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,1 +1,21 @@
-<p>user works!</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col" *ngFor="let u of users">
+            <p>{{u.uName}}</p> 
+        </div>
+
+
+
+         <!-- <div  *ngIf ="!isCollapsed">
+    
+        <ul class="comments">
+            <li li *ngIf="let c of comments">
+              <span class="comentss">{{c.text}}</span>
+            </li>
+          </ul>
+
+</div> -->
+
+    </div>
+</div>
