--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,20 +1,26 @@
-<!-- <div class="container">
-    <div class="row">
-        <div class="col" *ngFor="let po of posts">
-            <img src="{{po.imageUrl}}" class="image"  alt=""/> 
-        </div>
+<div class="container">
+    <div class="row justify-content-center">
+
+<!-- form -add a comment-->
+            <form class="form-group mt-5" [formGroup]="AddCommentFormGroup" (ngSubmit)="addComment()">
 
 
-
-         <div  *ngIf ="!isCollapsed">
-    
-        <ul class="comments">
-            <li li *ngFor="let c of comments">
-              <span class="comentss">{{c.text}}</span>
-            </li>
-          </ul>
-
-</div>
+            <div class="form-group text-center" >
+              <label>Comments</label>
+              <input type="text" class="form-control" formControlName="text" placeholder="Enter comment">
+              <button type="submit"  class="btn btn-primary">Add</button>
+            </div>     
+          </form>
+          
+            <div class="comment-section" *ngFor="let c of comment">
+                <ul >
+                    <li class="commentItself">
+                        {{c.text}}
+                        <span class="createdComment">{{c.createdAt | date}}</span>
+                        <span class="deleteComment" ><a class="btn btn-primary" role="button" (click)="deleteThisComment(c.id)">X</a></span>
+                    </li>
+                </ul>
+            </div>
 
     </div>
-</div> -->
+</div>
