--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -5,17 +5,30 @@
         {{posts[3].title}}</p>
     </div> -->
 
+    <form class="form-group mt-5" [formGroup]="AddPostFormGroup" (ngSubmit)="addPost()">
+
+
+      <div class="form-group text-center" >
+        <label>Your Post</label>
+          <input type="text" class="form-control" formControlName="title" placeholder="Post title" />
+          <textarea class="form-control" formControlName="description" placeholder="Post description" rows="3"></textarea>
+          <input type="text" class="form-control" formControlName="imageUrl" placeholder="Post Image url" />
+        <button type="submit"  class="btn btn-info">Add a posts</button>
+      </div>    
+      
+      
+    </form>
     
     <div class="col-lg-12">
-    <div class="card" *ngFor="let p of posts">
-       <img src="{{ p.imageUrl }}">
-      <div class="card-body" >
-
+    <div class="card">
        
+      <div class="card-body"  *ngFor="let p of posts">
+
+       <img src="{{ p.imageUrl }}">
 
         <h5 class="card-title">{{p.title}}</h5>
         <p class="card-text"></p>
-        <a href="#" class="btn btn-primary">Add a comment</a>
+        <a class="btn btn-info" (click)="deleteThisPost(p.id)">Delete Post</a>
 
       </div>
     </div>
